# snell

./: LICENSE  README.md  snell.cabal  snell.hs  stack.yaml
app/: snell.hs
