name:                snell
version:             0.1.0.0
synopsis:            Raytracer
description:         Please see README.md
homepage:            http://github.com/wouteroostervld/snell#readme
license:             MIT
license-file:        LICENSE
author:              Wouter Oosterveld
maintainer:          wouter.oosterveld@gmail.com
copyright:           2016 Wouter Oosterveld
category:            CGI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Lib
--   build-depends:       base >= 4.7 && < 5
--   default-language:    Haskell2010

executable snell
  hs-source-dirs:      app
  main-is:             snell.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , JuicyPixels
                     , linear
  default-language:    Haskell2010

test-suite snell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snell
